# ShallowRed

./: .gitignore  CMakeLists.txt  chess2.sln
chess2/: Bishop.cpp  Board.cpp  Board.h  Case.cpp  Case.h  DeepOneIA.cpp  DeepOneIA.h  Defines.h  DumbIA.cpp  DumbIA.h  Functions.cpp  Functions.h  KCastlingMove.cpp  KCastlingMove.h  King.cpp  Knight.cpp  Move.cpp  Move.h  MoveHistory.cpp  MoveHistory.h  Node.cpp  Node.h  Pawn.cpp  Piece.cpp  Piece.h  Player.cpp  Player.h  PromoteMove.cpp  PromoteMove.h  QCastlingMove.cpp  QCastlingMove.h  Queen.cpp  RandomIA.cpp  RandomIA.h  Rook.cpp  ShallowRed.cpp  ShallowRed.h  Tree.cpp  Tree.h  chess2.vcxproj  (+2 more)
include/board/: Board.h  Case.h
include/board/move/: KCastlingMove.h  Move.h  MoveHistory.h  PromoteMove.h  QCastlingMove.h
include/pieces/: Piece.h
include/player/: Player.h
include/player/ai/: DeepOneIA.h  DumbIA.h  RandomIA.h  ShallowRed.h
include/utils/: Defines.h  Functions.h
src/: main.cpp
src/board/: Board.cpp  Case.cpp
src/board/move/: KCastlingMove.cpp  Move.cpp  MoveHistory.cpp  PromoteMove.cpp  QCastlingMove.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/player/: Player.cpp
src/player/ai/: DeepOneIA.cpp  DumbIA.cpp  RandomIA.cpp  ShallowRed.cpp
src/utils/: Functions.cpp
